Switch to java 11